[gd_scene load_steps=25 format=3 uid="uid://b01up4l05d8a5"]

[ext_resource type="Script" path="res://nanogames/buzzing_lunch/frog/frog.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dyo46cn3b47fl" path="res://nanogames/buzzing_lunch/frog/_assets/tongue.png" id="2"]
[ext_resource type="Texture2D" uid="uid://d3e0joa11ktqh" path="res://nanogames/buzzing_lunch/frog/_assets/frog.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dg4i4xned3ix1" path="res://nanogames/buzzing_lunch/frog/_assets/indicator.svg" id="4"]
[ext_resource type="Shader" path="res://shaders/texture_scroll.gdshader" id="5"]
[ext_resource type="AudioStream" uid="uid://bynvblucd5gue" path="res://nanogames/buzzing_lunch/frog/_assets/slurp.wav" id="6_53gpt"]
[ext_resource type="AudioStream" uid="uid://cqyui66fv3b5j" path="res://nanogames/buzzing_lunch/frog/_assets/croak.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://c34tyw6th0nyk" path="res://nanogames/buzzing_lunch/frog/_assets/lick_lips.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://co5lowhrrb0qt" path="res://nanogames/buzzing_lunch/frog/_assets/sicken.wav" id="10"]

[sub_resource type="Gradient" id="Gradient_0eiay"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c4o1l"]
gradient = SubResource("Gradient_0eiay")
width = 1
height = 128
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 2

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("5")
shader_parameter/direction_speed = Vector2(0, 1)
shader_parameter/offset_x = 0.0
shader_parameter/offset_y = 0.0

[sub_resource type="CapsuleShape2D" id="2"]
radius = 45.0
height = 120.0

[sub_resource type="AudioStreamRandomizer" id="3"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("6_53gpt")

[sub_resource type="Animation" id="10"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [240.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tongue:size:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [185.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tongue:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="Animation" id="4"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(2, 1, 1, 1),
"update": 0,
"values": [240.0, 0.0, -20.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.2, 1.0]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Noises")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7")
}],
"times": PackedFloat32Array(0.3)
}
tracks/2/use_blend = true
tracks/3/type = "animation"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IndicatorAnimation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": PackedStringArray("fade_in"),
"times": PackedFloat32Array(0.8)
}

[sub_resource type="Animation" id="5"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -20.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.2, 1.0]
}

[sub_resource type="Animation" id="6"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 10.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.9, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tongue:size:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.7),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [393.0, 293.0, 393.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tongue:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.00713, 4.27606]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Noises")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="7"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 28.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.8, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.890196, 0.0745098, 0.0745098, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Noises")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10")
}],
"times": PackedFloat32Array(0.1)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vcyfb"]
_data = {
"RESET": SubResource("10"),
"appear": SubResource("4"),
"gulp": SubResource("5"),
"lick_lips": SubResource("6"),
"sicken": SubResource("7")
}

[sub_resource type="Animation" id="11"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tongue/TipFade/TongueIndicator:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="8"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tongue/TipFade/TongueIndicator:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="9"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tongue/TipFade/TongueIndicator:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sjlyd"]
_data = {
"RESET": SubResource("11"),
"fade_in": SubResource("8"),
"fade_out": SubResource("9")
}

[node name="Frog" type="Node2D"]
script = ExtResource("1")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(0, 240)
texture = ExtResource("3")

[node name="Tongue" type="NinePatchRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = 305.0
offset_right = 96.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 0
rotation = 3.14159
pivot_offset = Vector2(48, 0)
texture = ExtResource("2")
region_rect = Rect2(0, 0, 128, 200)
patch_margin_top = 17
patch_margin_bottom = 168
axis_stretch_vertical = 1

[node name="TipFade" type="NinePatchRect" parent="Tongue"]
clip_children = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 192.0
offset_right = 32.0
offset_bottom = 576.0
grow_horizontal = 2
pivot_offset = Vector2(32, 128)
texture = SubResource("GradientTexture2D_c4o1l")
patch_margin_bottom = 128
metadata/_edit_group_ = true

[node name="TongueIndicator" type="TextureRect" parent="Tongue/TipFade"]
self_modulate = Color(1, 1, 1, 0)
material = SubResource("1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4")
stretch_mode = 1

[node name="Anchor" type="Control" parent="Tongue"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -79.0
offset_bottom = -79.0

[node name="FlyHitbox" type="Area2D" parent="Tongue/Anchor"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tongue/Anchor/FlyHitbox"]
shape = SubResource("2")

[node name="FlyFollow" type="RemoteTransform2D" parent="Tongue/Anchor/FlyHitbox"]
update_rotation = false
update_scale = false

[node name="Slurp" type="AudioStreamPlayer2D" parent="Tongue/Anchor/FlyHitbox"]
stream = SubResource("3")
bus = &"Effects"

[node name="Noises" type="AudioStreamPlayer2D" parent="."]
bus = &"Effects"

[node name="FrogAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vcyfb")
}
autoplay = "appear"

[node name="IndicatorAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sjlyd")
}

[connection signal="body_entered" from="Tongue/Anchor/FlyHitbox" to="." method="_on_fly_hitbox_body_entered"]
[connection signal="animation_finished" from="FrogAnimation" to="." method="_on_frog_animation_animation_finished"]
